--- a/mappings/roaster-mapping.json
+++ b/mappings/roaster-mapping.json
@@ -9,10 +9,11 @@
             "type": "excel"
         }
     ],
-    "output_file": {
-        "path": "./roaster/output/output_template.xlsx",
+    "template_file": {
+        "path": "./ref/output_template.xlsx",
         "type": "excel"
     },
+    "output_path": "./roaster/output/",
     "mappings": [
         {
             "field_name": "Last Name",
@@ -191,76 +192,76 @@
           ]
         },
         {
-          "field_name": "Equip Type",
-          "source" : {
-              "sheet": "Sheet1",
-              "range": "G2:G_"
-          },
-          "validation": [
-              {
-                  "type": "allow-empty",
-                  "message": "Equip Type could be empty"
-              }
-          ],
-          "transformations": ["alternate_term(equipment_type)"],
-          "destination": [
-            {
+            "field_name": "Equip Type",
+            "source" : {
                 "sheet": "Sheet1",
-                "range": "J25:J_",
-                "format": {
-                    "font": {
-                        "size": 11,
-                        "name": "Aptos Narrow",
-                        "color": "000000"
-                    },
-                    "alignment": {
-                        "horizontal": "center",
-                        "vertical": "bottom",
-                        "wrap_text": false
-                    },
-                    "border": {
-                        "style": "none",
-                        "color": "FFFFFF"
+                "range": "G2:G_"
+            },
+            "validation": [
+                {
+                    "type": "allow-empty",
+                    "message": "Equip Type could be empty"
+                }
+            ],
+            "transformations": ["alternate_term(equipment_type)"],
+            "destination": [
+                {
+                    "sheet": "Sheet1",
+                    "range": "J25:J_",
+                    "format": {
+                        "font": {
+                            "size": 11,
+                            "name": "Aptos Narrow",
+                            "color": "000000"
+                        },
+                        "alignment": {
+                            "horizontal": "center",
+                            "vertical": "bottom",
+                            "wrap_text": false
+                        },
+                        "border": {
+                            "style": "none",
+                            "color": "FFFFFF"
+                        }
                     }
                 }
-            }
-          ]
+            ]
         },
         {
-          "field_name": "Equip #",
-          "source": {
-              "sheet": "Sheet1",
-              "range": "H2:H_"
-          },
-          "validation": [
-              {
-                  "type": "allow-empty",
-                  "message": "Equip # could be empty"
-              }
-          ],
-          "transformations": ["alternate_term(equip_no)"],
-          "destination": [
-              {
-                  "sheet": "Sheet1",
-                  "range": "K25:K_",
-                  "format": {
-                      "font": {
-                          "size": 11,
-                          "name": "Aptos Narrow",
-                          "color": "000000"
-                      },
-                      "alignment": {
-                          "horizontal": "center",
-                          "vertical": "bottom",
-                          "wrap_text": false
-                      },
-                      "border": {
-                          "style": "none",
-                          "color": "FFFFFF"
-                      }
-                  }
-              }
-          ]
+            "field_name": "Equip #",
+            "source": {
+                "sheet": "Sheet1",
+                "range": "H2:H_"
+            },
+            "validation": [
+                {
+                    "type": "allow-empty",
+                    "message": "Equip # could be empty"
+                }
+            ],
+            "transformations": ["alternate_term(equip_no)"],
+            "destination": [
+                {
+                    "sheet": "Sheet1",
+                    "range": "K25:K_",
+                    "format": {
+                        "font": {
+                            "size": 11,
+                            "name": "Aptos Narrow",
+                            "color": "000000"
+                        },
+                        "alignment": {
+                            "horizontal": "center",
+                            "vertical": "bottom",
+                            "wrap_text": false
+                        },
+                        "border": {
+                            "style": "none",
+                            "color": "FFFFFF"
+                        }
+                    }
+                }
+            ]
         },
         {
             "field_name": "Company",
@@ -319,40 +320,40 @@
             ]
         },
         {
-          "field_name": "Crew Number",
-          "source": {
-              "sheet": "Sheet1",
-              "range": "E2:E_"
-          },
-          "validation": [
-            {
-                "type": "required",
-                "message": "For Crew Number, Classification column is required"
-            }
-          ],
-          "transformations": ["generate_data_based_on(classification)"],
-          "destination": [
-              {
-                  "sheet": "Sheet1",
-                  "range": "D25:D_",
-                  "format": {
-                      "font": {
-                          "size": 11,
-                          "name": "Calibri",
-                          "color": "000000"
-                      },
-                      "alignment": {
-                          "horizontal": "center",
-                          "vertical": "center",
-                          "wrap_text": false
-                      },
-                      "border": {
-                          "style": "none",
-                          "color": "FFFFFF"
-                      }
-                  }
-              }
-          ]
+            "field_name": "Crew Number",
+            "source": {
+                "sheet": "Sheet1",
+                "range": "E2:E_"
+            },
+            "validation": [
+                {
+                    "type": "required",
+                    "message": "Classification data is required for Crew Number"
+                }
+            ],
+            "transformations": ["generate_data_based_on(classification)"],
+            "destination": [
+                {
+                    "sheet": "Sheet1",
+                    "range": "D25:D_",
+                    "format": {
+                        "font": {
+                            "size": 11,
+                            "name": "Calibri",
+                            "color": "000000"
+                        },
+                        "alignment": {
+                            "horizontal": "center",
+                            "vertical": "center",
+                            "wrap_text": false
+                        },
+                        "border": {
+                            "style": "none",
+                            "color": "FFFFFF"
+                        }
+                    }
+                }
+            ]
         }
     ],
     "functions": {
@@ -407,25 +408,25 @@
             "Outlier - Internal": "Mapper - Official"
         },
         "classification": {
-          "Journeyman Lineman": "Line JL",
-          "Outlier - Internal": "Mapper - Official",
-          "Groundman / Driver": "Line Groundhand",
-          "Equipment Operator": "Equipment Op"
+            "Journeyman Lineman": "Line JL",
+            "Outlier - Internal": "Mapper - Official",
+            "Groundman / Driver": "Line Groundhand",
+            "Equipment Operator": "Equipment Op"
         },
-        "equip_no":{
-          "Outlier - Internal": "Mapper - Official",
-          "BT-1184 SQUIRT": "BT-1184",
-          "C025": "PT-CO25",
-          "2055": "ST-2055",
-          "SM3150": "SM1/3150",
-          "3304": "ST-3304"
+        "equip_no": {
+            "Outlier - Internal": "Mapper - Official",
+            "BT-1184 SQUIRT": "BT-1184",
+            "C025": "PT-CO25",
+            "2055": "ST-2055",
+            "SM3150": "SM1/3150",
+            "3304": "ST-3304"
         }
     },
     "transformation_rules": {
         "classification": {
             "counter_rules": {
-                "start": 1,
-                "increment_on": ["Foreman"],
+                "start": 0,
+                "increment_on": ["General Foreman", "Foreman"],
                 "output_type": "string",
                 "case_sensitive": false
             }
