new file for data mappings

--- a/mappings/roaster-mapping.json
+++ b/mappings/roaster-mapping.json
@@ -1,19 +1,4 @@
 {
-    "input_files": [
-        {
-            "path": "./roaster/input/input1.xlsx",
-            "type": "excel"
-        },
-        {
-            "path": "./roaster/input/input2.xlsx",
-            "type": "excel"
-        }
-    ],
-    "template_file": {
-        "path": "./ref/output_template.xlsx",
-        "type": "excel"
-    },
-    "output_path": "./roaster/output/",
     "mappings": [
         {
             "field_name": "Last Name",
@@ -94,7 +79,7 @@
                     "message": "Classification is required"
                 }
             ],
-            "transformations": ["alternate_term(classification)", "title_case"],
+            "transformations": ["data_mapper(classification)", "title_case"],
             "destination": [
                 {
                     "sheet": "Sheet1",
@@ -203,7 +188,7 @@
                     "message": "Equip Type could be empty"
                 }
             ],
-            "transformations": ["alternate_term(equipment_type)"],
+            "transformations": ["data_mapper(equipment_type)"],
             "destination": [
                 {
                     "sheet": "Sheet1",
@@ -239,7 +224,7 @@
                     "message": "Equip # could be empty"
                 }
             ],
-            "transformations": ["alternate_term(equip_no)"],
+            "transformations": ["data_mapper(equip_no)"],
             "destination": [
                 {
                     "sheet": "Sheet1",
@@ -395,31 +380,6 @@
                 "type": "solid",
                 "color": "EEEEEE"
             }
-        }
-    },
-    "value_mappings": {
-        "equipment_type": {
-            "Bucket Material Handler 51'-60'": "Bucket Truck",
-            "Backyard Machine": "Rear Property Machine",
-            "Mechanic Truck": "Other",
-            "Pole Trailer": "Other",
-            "Haul Truck and Trailer": "Other",
-            "Pickup": "Pick-up",
-            "Outlier - Internal": "Mapper - Official"
-        },
-        "classification": {
-            "Journeyman Lineman": "Line JL",
-            "Outlier - Internal": "Mapper - Official",
-            "Groundman / Driver": "Line Groundhand",
-            "Equipment Operator": "Equipment Op"
-        },
-        "equip_no": {
-            "Outlier - Internal": "Mapper - Official",
-            "BT-1184 SQUIRT": "BT-1184",
-            "C025": "PT-CO25",
-            "2055": "ST-2055",
-            "SM3150": "SM1/3150",
-            "3304": "ST-3304"
         }
     },
     "transformation_rules": {
